[package]
name = "kvs"
version = "0.1.0"
authors = ["Pranav Sharma <pranav.sharma.ama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
